2008-09-30  Badlop  <badlop@process-one.net>

	* src/*/Makefile.win32: Provide explicit beam filenames because
	nmake does not accept wildcards (thanks to Attila
	Vangel)(EJAB-543)
	
2008-09-24  Christophe Romain  <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: Allow PEP node type to be mapped with
	namespace (EJAB-739). Change get_items to use From (EJAB-751). (Thanks
	to Eric Cestari)
	* src/mod_pubsub/gen_pubsub_node.erl: Likewise
	* src/mod_pubsub/node_dispatch.erl: Likewise
	* src/mod_pubsub/node_buddy.erl: Likewise
	* src/mod_pubsub/node_zoo.erl: Likewise
	* src/mod_pubsub/node.template: Likewise
	* src/mod_pubsub/node_private.erl: Likewise
	* src/mod_pubsub/node_public.erl: Likewise
	* src/mod_pubsub/node_default.erl: Likewise
	* src/mod_pubsub/node_pep.erl: Likewise
	* src/mod_pubsub/node_club.erl: Likewise

	* src/mod_pubsub/node_mb.erl: Added PEP microglobing node (Thanks to
	Eric Cestari)

2008-09-22  Mickael Remond  <mremond@process-one.net>

	* src/mod_configure.erl: Fix adhoc commands reply types for
	"get-online-users-num" and "get-registered-users-num" (EJAB-756).

2008-09-15  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Fix explanation of mod_muc's anonymous
	option. Make clear that an ejabberd_service can only serve a
	single external component. Provide Mnesia directory when setting
	clustering (thanks to Matthew Reilly)

2008-09-12  Badlop  <badlop@process-one.net>

	* src/web/ejabberd_http.hrl: Provide Host, Port, Headers and
	Transfer Protocol in request (thanks to Eric Cestari)(EJAB-560)
	* src/web/ejabberd_http.erl: Likewise

2008-09-02  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Fix mod_proxy configuration example
	* doc/guide.html: Likewise

2008-09-02  Mickael Remond  <mremond@process-one.net>

	* src/odbc/mssql2000.sql: Script for MSSQL 2000
	* src/odbc/mssql2005.sql: Script for MSSQL 2005 (EJAB-535)
	* src/odbc/mssql.sql: removed

2008-08-27  Christophe Romain  <christophe.romain@process-one.net>
