@@ -1,3 +1,8 @@
+2008-10-01  Mickael Remond  <mremond@process-one.net>
+
+	* src/mod_shared_roster.erl: Correct roster push when changing
+	a shared roster entry name (EJAB-738).
+
 2008-09-30  Badlop  <badlop@process-one.net>
 
 	* src/*/Makefile.win32: Provide explicit beam filenames because
